--- a/index.html
+++ b/index.html
@@ -118,17 +118,24 @@
     <button style="text-align: right; border: 20px 120px; color: deeppink;
     padding: 10px 25px; border: none; font-size: 22px; background-color: whitesmoke; margin: 25px 0;">See more <i class="fa-solid fa-arrow-right"></i></button>
     </main>
+    <!-- Newsletter Section -->
     <section class="join">
         <div>
             <img src="images/gear.png" alt="">
         </div>
         <div>
-            <h2 class="f-title">Featured products at one place</h2>
+            <h2 class="n-title">Featured products at one place</h2>
             <p class="f-info">Amet minim mollit non deserunt ullamco est sit aliqua dolordo amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-            <button class="f-button">Prebook Now <i class="fa-solid fa-arrow-right"></i></button>
+            <button class="n-button">Prebook Now <i class="fa-solid fa-arrow-right"></i></button>
             </div>
         </div>
     </section>    
+    <!-- final section with socials -->
+    <footer class="footer">
+        <h3 class="web-title" style="margin-bottom: 10px;">Influencer Products</h3>
+        <p class="f-rights">Copyright © 2022 influencer products <br> All rights reserved</p>
+        <div class="socials"><i class="fa-brands fa-instagram icon"></i><i class="fa-brands fa-dribbble icon"></i><i class="fa-brands fa-twitter icon"></i><i class="fa-brands fa-youtube icon"></i></div>
+    </footer>
 </body>
 
 </html>
