Stuck in a problem

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 Buyers protection possible!</p>
         </div>
     </div>
-    <button style="text-align: right; border: 20px 120px; color: deeppink;
+    <button class="see" style="text-align: right; border: 20px 120px; color: deeppink;
     padding: 10px 25px; border: none; font-size: 22px; background-color: whitesmoke; margin: 25px 0;">See more <i class="fa-solid fa-arrow-right"></i></button>
     </main>
     <!-- Newsletter Section -->
